--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -346,7 +346,7 @@
         <!-- 设置环信应用的appkey -->
         <meta-data
             android:name="EASEMOB_APPKEY"
-            android:value="easemob-demo#chatdemoui" />
+            android:value="easemob-demo#no1" />
         <!-- 声明sdk所需的service -->
         <service android:name="com.easemob.chat.EMChatService"
             android:exported="true"
