--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,11 @@
 buildscript {
     repositories {
         jcenter()
-        // ============== fabric start
-//        maven { url 'https://maven.fabric.io/public' }
-        // ============== fabric end
+        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.2'
-        // ============== fabric start
-//        classpath 'io.fabric.tools:gradle:1.+'
-        // ============== fabric end
+        classpath 'com.android.tools.build:gradle:2.2.0'
+        classpath 'io.fabric.tools:gradle:1.+'
     }
 }
 
@@ -20,26 +16,24 @@ allprojects {
     }
 }
 
+apply from: 'buildsystem/dependencies.gradle'
+
 apply plugin: 'com.android.application'
-// ============== fabric start
-//apply plugin: 'io.fabric'
-// ============== fabric end
+apply plugin: 'io.fabric'
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
 
-// ============== fabric start
-//repositories {
-//    maven { url 'https://maven.fabric.io/public' }
-//}
-// ============== fabric end
-
+def globalConfiguration = rootProject.extensions.getByName("ext")
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion globalConfiguration.getAt("androidCompileSdkVersion")
+    buildToolsVersion globalConfiguration.getAt("androidBuildToolsVersion")
 
     defaultConfig {
         applicationId "com.hyphenate.chatuidemo"
-        minSdkVersion 11
-        targetSdkVersion 22
+        minSdkVersion globalConfiguration.getAt("androidMinSdkVersion")
+        targetSdkVersion globalConfiguration.getAt("androidTargetSdkVersion")
         multiDexEnabled true
     }
 
@@ -80,14 +74,7 @@ dependencies {
     compile project(':redpacketlibrary')
     compile project(':EaseUI')
     compile fileTree(dir: 'libs', include: '*.jar', exclude: 'android-support-multidex.jar')
-    //考虑到在eclipse中,直接使用源码
-//    compile ('com.anthonycr.grant:permissions:1.0'){
-//        exclude module: 'support-v4'
-//    }
-// ============== fabric start
-//    compile('com.crashlytics.sdk.android:crashlytics:2.6.1@aar') {
-//        transitive = true;
-//    }
-// ============== fabric end
-    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile('com.crashlytics.sdk.android:crashlytics:2.6.1@aar') {
+        transitive = true;
+    }
 }
