--- a/build.gradle
+++ b/build.gradle
@@ -78,7 +78,7 @@ android {
 }
 
 dependencies {
-    compile project(':redpacketlibrary')
+    compile project(':redpacketui-open')
     compile project(':EaseUI')
     compile fileTree(dir: 'libs', include: '*.jar', exclude: 'android-support-multidex.jar')
 }
