--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':EaseUI', ':redpacketlibrary'
+include ':EaseUI', ':redpacketui-open'
 project(':EaseUI').projectDir = new File('../easeui')
