--- a/redpacketlibrary/build.gradle
+++ b/redpacketlibrary/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.1"
 
     defaultConfig {
         minSdkVersion 11
@@ -45,8 +45,8 @@ android {
 }
 
 dependencies {
-    compile('com.android.support:recyclerview-v7:25.3.1') {
-        exclude group: 'com.android.support', module: 'support-annotations'
+    compile('com.android.support:recyclerview-v7:23.3.0') {
+        transitive = false
     }
     compile project(':EaseUI')
     compile 'com.yunzhanghu.redpacket:redpacket-wallet:3.5.0'
