--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-sdk
         android:minSdkVersion="9"
         android:targetSdkVersion="19"
-        tools:overrideLibrary="com.easemob.redpacket, com.easemob.redpacketui"
+        tools:overrideLibrary="com.easemob.redpacket, com.yunzhanghu.redpacketui"
         />
 
     <uses-permission android:name="android.permission.VIBRATE"/>
@@ -344,7 +344,7 @@
         <!-- 设置环信应用的appkey -->
         <meta-data
             android:name="EASEMOB_APPKEY"
-            android:value="easemob-demo#chatdemoui"/>
+            android:value="youliao#youliao"/>
         <!-- 声明sdk所需的service -->
         <service
             android:name="com.easemob.chat.EMChatService"
